# fsnt

./: .gitignore  AUTHORS  Makefile.am  README  configure.ac
src/: Makefile.am
src/lib/: Makefile.am  compose.cc  compose.h  io.cc  io.h  optimize_flags.cc  optimize_flags.h  relabel.cc  relabel.h  reverse.cc  reverse.h  string_interner.cc  string_interner.h  strip.cc  strip.h  symbol_table.cc  symbol_table.h  to_lookup.cc  to_lookup.h  tokenizer.cc  tokenizer.h  transducer.cc  transducer.h  transition.cc  transition.h
src/lib/utils/: Makefile.am  compression.cc  compression.h  icu-iter.cc  icu-iter.h  set_utils.h  transition_iter.cc  transition_iter.h
src/tools/: Makefile.am  compose.cc  expand.cc  fst2txt.cc  optimize-flags.cc  reverse.cc  strip.cc  txt2fst.cc
src/tools/cli/: get_io.cc  get_io_2fsts.cc  get_io_fst2fst.cc  get_io_fst2txt.cc  get_io_txt2fst.cc
tests/: run_tests.py
tests/compose/: lex_simple_identity.att  result_simple2.txt  result_simple3.txt  result_simple_identity.att  result_simple_identity_multi.att  rule_simple_identity.att  rule_simple_identity_epsilon.att
tests/reverse/: simple_unweighted_in.att  simple_unweighted_out.att
